# leadsynergy

./: .gitignore  README.md  start_all.bat  start_all.ps1
Backend/: .deploy_trigger  .gitignore  AI_AGENT_FIXES_PLAN.md  AI_AGENT_SETUP.md  CONTEXT_ANALYSIS.md  LEADSYNERGY_AI_AGENT_FUB_PRESENTATION.md  LEAD_PERSONALIZATION.md  Procfile  QUICK_START_AI_AGENT.md  RAILWAY_DEPLOYMENT.md  RAILWAY_SETUP.md  README.md  SELLER_VS_BUYER_SCORING.md  SMART_UPDATES_GUIDE.md  START_BACKEND_FIXED.md  TASK_EXECUTION_PLAN.md  TEST_LOCALLY.md  apply_migration.py  backfill_message_logs.py  backfill_proactive_outreach.py  celery_worker.py  check_ai_leads.py  check_schema.py  check_users.py  clear_optout_3310.py  diagnose_maf_only.py  diagnose_platforms.py  fix_schema.py  force_sync_all_leads.py  main.py  messages_page.html  monitor_sync.py  nixpacks.toml  page_text.txt  person_view.html  pyproject.toml  pytest.ini  railway.json  railway_add_missing_services.sh  railway_check.sh  (+34 more)
Backend/app/: __init__.py
Backend/docs/: AI_FOLLOW_UP_SEQUENCES.md  MAGIC_LINK_INVITATION_BACKEND_IMPLEMENTATION.md  MULTI_TENANT_FUB_GUIDE.md  MULTI_TENANT_IMPLEMENTATION_SUMMARY.md  ORGANIZATION_PROXY_SYSTEM_DOCUMENTATION.md  PROXY_CONFIGURATION.md  QUICK_PROXY_SETUP.md
Backend/logs/: .gitkeep
Backend/migrations/: COMPLETE_FIX.sql  COMPLETE_LEADSYNERGY_MIGRATION.sql  FIX_FRONTEND_SCHEMA.sql  FIX_RLS_POLICIES.sql  add_leaddata_integration.sql  add_platform_action_log.sql  add_same_status_note_to_lead_source_settings.sql
Backend/sample_rows/: lead_source_settings_rows.csv
Backend/scripts/: add_credits.py  (+94 more)
(+327 files in other folders)
