[project]
name = "leadsynergy-backend"
version = "1.0.0"
description = "LeadSynergy AI Follow-Up Agent Backend"
requires-python = ">=3.12"

dependencies = [
    "aiohttp>=3.11,<4",
    "anthropic>=0.40",
    "APScheduler>=3.11,<4",
    "celery>=5.5,<6",
    "celery-redbeat>=2.3,<3",
    "deprecation>=2.1",
    "Flask>=3.1,<4",
    "flask-cors>=5.0",
    "httpx>=0.28",
    "playwright>=1.49",
    "postgrest>=0.19",
    "psycopg2-binary>=2.9,<3",
    "pyngrok>=7.2",
    "python-dotenv>=1.0",
    "pytz>=2024.1",
    "redis>=5.0,<6",
    "requests>=2.32,<3",
    "rq>=2.3,<3",
    "selenium>=4.29,<4.35",
    "selenium-stealth>=1.0",
    "stripe>=12.1,<13",
    "supabase>=2.13,<2.14",
    "tabulate>=0.9",
    "undetected-chromedriver>=3.5,<4",
    "uvicorn>=0.34",
    "webdriver-manager>=4.0,<5",
]

[project.optional-dependencies]
voice = [
    "flask-socketio>=5.0",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
]

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
]
